--- a/package.json
+++ b/package.json
@@ -7,7 +7,13 @@
     "registry": "http://npm:4873"
   },
   "scripts": {
-    "test": "NODE_ENV=test nyc mocha --exit"
+    "test": "jest"
+  },
+  "jest": {
+    "collectCoverage": true,
+    "coverageReporters": [
+      "text"
+    ]
   },
   "dependencies": {
     "serialport": "^7.1.5"
@@ -17,12 +23,11 @@
     "url": "https://am-gitlab.amthinking.net/software-engineering-tools/js/ami-serial"
   },
   "devDependencies": {
-    "chai": "^4.2.0",
-    "chai-as-promised": "^7.1.1",
-    "chai-spies": "^1.0.0",
-    "mocha": "^6.1.4",
-    "nyc": "^14.1.1",
-    "proxyquire": "^2.1.0"
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-throw-expressions": "^7.2.0",
+    "@babel/preset-env": "^7.3.1",
+    "babel-jest": "^24.0.0",
+    "jest": "^24.0.0"
   },
   "author": "Ivo Janssen <ijanssen@appliedminds.com>",
   "license": "UNLICENSED"
