refactor!: favor composition over inheritance
BREAKING CHANGE: `Device` should no longer be inherited, but rather instantiated as a component.
 * refactor: Instead of overriding `receive`, listen for the `data` event instead
 * feat: The `send` message now returns a Promise instead of a Boolean
 * build: Dependency upgrades
 * style: Add eslint config

--- a/package.json
+++ b/package.json
@@ -13,22 +13,72 @@
     "collectCoverage": true,
     "coverageReporters": [
       "text"
-    ]
+    ],
+    "verbose": true,
+    "silent": true
   },
   "dependencies": {
-    "serialport": "^8.0.5"
+    "serialport": "^8.0.7"
   },
   "repository": {
     "type": "git",
     "url": "https://am-gitlab.amthinking.net/software-engineering-tools/js/ami-serial"
   },
   "devDependencies": {
-    "@babel/core": "^7.7.5",
-    "@babel/plugin-proposal-throw-expressions": "^7.7.4",
-    "@babel/preset-env": "^7.7.6",
-    "babel-jest": "^24.9.0",
-    "jest": "^24.9.0"
+    "@babel/core": "^7.9.6",
+    "@babel/plugin-proposal-throw-expressions": "^7.8.3",
+    "@babel/preset-env": "^7.9.6",
+    "babel-jest": "^25.5.1",
+    "eslint": "^6.8.0",
+    "eslint-plugin-jest": "^23.8.2",
+    "jest": "^25.5.3"
   },
   "author": "Ivo Janssen <ijanssen@appliedminds.com>",
-  "license": "UNLICENSED"
+  "license": "UNLICENSED",
+  "eslintConfig": {
+    "env": {
+      "es6": true,
+      "jest/globals": true,
+      "node": true
+    },
+    "parserOptions": {
+      "ecmaVersion": 2020,
+      "sourceType": "module"
+    },
+    "extends": [
+      "eslint:recommended",
+      "plugin:jest/recommended"
+    ],
+    "plugins": [
+      "jest"
+    ],
+    "rules": {
+      "indent": [
+        "error",
+        4
+      ],
+      "linebreak-style": [
+        "error",
+        "unix"
+      ],
+      "quotes": [
+        "error",
+        "single"
+      ],
+      "no-console": [
+        "error",
+        {
+          "allow": [
+            "warn",
+            "info",
+            "error"
+          ]
+        }
+      ],
+      "semi": [
+        "error",
+        "never"
+      ]
+    }
+  }
 }
