build: only publish needed files in package

--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "verbose": true,
     "silent": true
   },
+  "files": [
+    "index.js"
+  ],
   "dependencies": {
     "serialport": "^9.2.8"
   },
