--- a/package.json
+++ b/package.json
@@ -16,14 +16,13 @@
     "coverageReporters": [
       "text"
     ],
-    "verbose": true,
-    "silent": true
+    "verbose": true
   },
   "files": [
     "index.js"
   ],
   "dependencies": {
-    "serialport": "^9.2.8"
+    "serialport": "^10.4.0"
   },
   "repository": {
     "type": "git",
@@ -34,13 +33,13 @@
   },
   "homepage": "https://github.com/appliedminds/serial",
   "devDependencies": {
-    "@appliedminds/eslint-config": "^1.1.0",
-    "@babel/core": "^7.17.2",
-    "@babel/preset-env": "^7.16.11",
-    "babel-jest": "^27.5.1",
-    "eslint": "^8.8.0",
-    "eslint-plugin-jest": "^26.1.0",
-    "jest": "^27.5.1"
+    "@appliedminds/eslint-config": "^1.3.0",
+    "@babel/core": "^7.19.3",
+    "@babel/preset-env": "^7.19.3",
+    "babel-jest": "^29.1.0",
+    "eslint": "^8.24.0",
+    "eslint-plugin-jest": "^27.0.4",
+    "jest": "^29.1.1"
   },
   "author": "Ivo Janssen <ivo@appliedminds.com>",
   "license": "MIT",
